roles/apps-setup/prometheus-setup/files/07-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /prometheus/$1
    nginx.ingress.kubernetes.io/rewrite-target: /prometheus/$1
spec:
  rules:
  - http:
      paths:
        - path: /prometheus/?(.*)
          backend:
            serviceName: prometheus-release-server
            servicePort: http
